all the endpoints request and responces updated
